Fix some getElementsByTagNameNS issues, both regressions and long-standing bugs.  Bug 343307, r+sr=sicking