content/base/src/nsDocument.cpp
@@ -2739,19 +2739,15 @@ nsDocument::GetElementsByTagNameNS(const nsAString& aNamespaceURI,
                                    const nsAString& aLocalName,
                                    nsIDOMNodeList** aReturn)
 {
-  PRInt32 nameSpaceId = kNameSpaceID_Unknown;
+  PRInt32 nameSpaceId = kNameSpaceID_Wildcard;
 
   nsContentList *list = nsnull;
 
   if (!aNamespaceURI.EqualsLiteral("*")) {
-    nameSpaceId =
-      nsContentUtils::NameSpaceManager()->GetNameSpaceID(aNamespaceURI);
-
-    if (nameSpaceId == kNameSpaceID_Unknown) {
-      // Unknown namespace means no matches, we create an empty list...
-      list = NS_GetContentList(this, nsnull, kNameSpaceID_None).get();
-      NS_ENSURE_TRUE(list, NS_ERROR_OUT_OF_MEMORY);
-    }
+    nsresult rv =
+      nsContentUtils::NameSpaceManager()->RegisterNameSpace(aNamespaceURI,
+                                                            nameSpaceId);
+    NS_ENSURE_SUCCESS(rv, rv);
   }
 
   if (!list) {
